tests/fixtures/constrained_core_methods.out
error: Could not match types:

        @ __ROOT__/tests/fixtures/constrained_core_methods.rb:1
      1 |  def array_compact => nil
                                ^^^ NilClass, with:
        @ (builtin stdlib):809
    809 |    def compact[NonNullType; ~NonNullType = ElementType] => [NonNullType]; end
                                                                     ^^^^^^^^^^^^^ Array::[Integer]

        - arising from an attempt to match:

        @ __ROOT__/tests/fixtures/constrained_core_methods.rb:1
      1 |  def array_compact => nil
                                ^^^ NilClass, with:
        @ __ROOT__/tests/fixtures/constrained_core_methods.rb:2
      2 |    [1, nil, 3].compact
             ^^^^^^^^^^^^^^^^^^^ Array::[Integer]

error: Could not match types:

        @ (builtin stdlib):809
    809 |    def compact[NonNullType; ~NonNullType = ElementType] => [NonNullType]; end
                                      ^^^^^^^^^^^^ NilClass | t2, with:
        @ __ROOT__/tests/fixtures/constrained_core_methods.rb:6
      6 |    [1, 2, 3].compact
              ^ Integer

        - arising from an attempt to match:

        @ (builtin stdlib):809
    809 |    def compact[NonNullType; ~NonNullType = ElementType] => [NonNullType]; end
                                      ^^^^^^^^^^^^ NilClass | t2, with:
        @ (builtin stdlib):809
    809 |    def compact[NonNullType; ~NonNullType = ElementType] => [NonNullType]; end
                                                     ^^^^^^^^^^^ Integer
        @ (builtin stdlib):809
    809 |    def compact[NonNullType; ~NonNullType = ElementType] => [NonNullType]; end
                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ in this expression

error: Could not match types:

        @ __ROOT__/tests/fixtures/constrained_core_methods.rb:9
      9 |  def array_to_h => nil
                             ^^^ NilClass, with:
        @ (builtin stdlib):827
    827 |    def to_h[K, V; ElementType = [K, V]] => { K => V }; end
                                                     ^^^^^^^^^^ Hash::[String, Integer]

        - arising from an attempt to match:

        @ __ROOT__/tests/fixtures/constrained_core_methods.rb:9
      9 |  def array_to_h => nil
                             ^^^ NilClass, with:
        @ __ROOT__/tests/fixtures/constrained_core_methods.rb:10
     10 |    [["one", 1], ["two", 2]].to_h
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Hash::[String, Integer]

error: Could not match types:

        @ __ROOT__/tests/fixtures/constrained_core_methods.rb:14
     14 |    [["one", 1], 2].to_h
             ^^^^^^^^^^^^^^^ [String, Integer] | Integer, with:
        @ (builtin stdlib):827
    827 |    def to_h[K, V; ElementType = [K, V]] => { K => V }; end
                                          ^^^^^^ [t3, t4]

        - arising from an attempt to match:

        @ (builtin stdlib):827
    827 |    def to_h[K, V; ElementType = [K, V]] => { K => V }; end
                            ^^^^^^^^^^^ [String, Integer] | Integer, with:
        @ (builtin stdlib):827
    827 |    def to_h[K, V; ElementType = [K, V]] => { K => V }; end
                                          ^^^^^^ [t3, t4]
        @ (builtin stdlib):827
    827 |    def to_h[K, V; ElementType = [K, V]] => { K => V }; end
                            ^^^^^^^^^^^^^^^^^^^^ in this expression
